overflow fix

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -43,6 +43,7 @@ form {
   grid-template-columns: 25% auto;
   width: 100%;
   min-height: 40rem;
+  max-height: 40rem;
   gap: 1rem;
 }
 
@@ -151,6 +152,9 @@ input:focus {
 
 .users-list {
   margin-top: 1rem;
+  overflow-y: scroll;
+  height: fit-content;
+  max-height: 30rem;
 }
 
 .users-list-header {
